Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.11
-
None
-
Not for ES Release Notes
-
Q1/2026 Galera Development, Q2/2026 Galera Maintenance, Q2/2026 Replic. Development
Description
galera.GCF-360 w9 [ fail ]
|
Test ended at 2025-04-10 14:38:49
|
WSREP did not transition to state READY
|
- saving '/home/buildbot/s390x-ubuntu-2004/build/mysql-test/var/9/log/galera.GCF-360/' to '/home/buildbot/s390x-ubuntu-2004/build/mysql-test/var/log/galera.GCF-360/'
|
Retrying test galera.GCF-360, attempt(2/3)...
|
worker[09] > Restart - not started
|
worker[09] > Restart - not started
|
worker[09] > Restart - not started
|
worker[09] > Restart - not started
|
***Warnings generated in error logs during shutdown after running tests: galera.GCF-360
|
2025-04-10 14:30:19 2 [ERROR] WSREP: Receiving IST failed, node restart required: IST receiver reported failure: 'IST didn't contain all write sets, expected last: 3 last received: -1' (71)
|
2025-04-10 14:30:19 2 [ERROR] WSREP: /home/buildbot/gal-s390x-ubuntu-2004/build/gcs/src/gcs.cpp:s_join():990: Sending JOIN failed: -103 (Connection was closed).
|
2025-04-10 14:30:19 2 [Warning] WSREP: Failed to JOIN the cluster after SST gcs_join(45dee178-1618-11f0-9cac-4206f3d29562:3) failed
|
2025-04-10 14:30:19 2 [Warning] WSREP: Cert position -1 less than last committed 3
|
2025-04-10 14:30:19 2 [Warning] WSREP: Cert position -1 less than last committed 3
|
Attachments
Issue Links
- relates to
-
MDEV-36627 galera.MDEV-29142: certification position less than last commited
-
- Closed
-
-
MDEV-36512 galera_3nodes.GCF-354: certification position less than last committed
-
- Closed
-