MDEV-36621: galera.GCF-360 test: IST failure

Issue:
- GCache::seqno_release() could release buffers at or above
seqno_locked. When called seqno_release(N) with N >= seqno_locked,
free_common() would mark those buffers BUFFER_RELEASED
(seqno_release() -> free_common() -> BH_release()).
- The subsequent malloc() calls then discarded those buffers from
seqno2ptr via discard_size(), causing the IST sender's
seqno_get_buffers() to throw NotFound
for the missing entries.
(malloc() -> discard_size() -> discard() -> pop_front())
- The joiner then received an incomplete IST stream
 (seqno_get_buffers() -> seqno2ptr.at() -> NotFound):

  "IST didn't contain all write sets, expected last: 3 last received: -1"

Solution:
Fixed by clamping the end to seqno_locked - 1 and
breaking the outer loop once seqno_released reaches the lock
boundary. This allows releasing everything below seqno_locked.